Resolved Recently viewed products in Luma theme does not fit on screen #27058

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
@@ -642,6 +642,20 @@
             &:extend(.abs-no-border-top all);
         }
     }
+    
+    .sidebar{
+        .product-items{
+            .product-item-details{
+                margin: 0;
+            }
+            .product-item-info{
+                .product-item-photo{
+                    position: relative;
+                }
+            }
+        }
+    }
+
 }
 
 //
